--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,23 @@
 	<name>jUnitTests</name>
 	<description>tests from SpringBootGuru</description>
 
+	<developers>
+		<developer>
+			<id>kamildyla</id>
+			<name>Kamil Dyla</name>
+			<email>kamil.dyla09@gmail.com</email>
+		</developer>
+	</developers>
+
+	<inceptionYear>2020</inceptionYear>
+
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>15</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<junit-platform.version>5.7.0</junit-platform.version>
 	</properties>
 
 	<dependencies>
@@ -47,13 +62,19 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.7.0</version>
+			<version>${junit-platform.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.7.0</version>
+			<version>${junit-platform.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8</version>
 			<scope>test</scope>
 		</dependency>
 
